tdf#112435 Scroll to navigated position

Force scroll to position of navigation when navigating to
inactive document using Navigator.

Change-Id: I8671973f5fdb5f4158a7795bf0b3381db867d57a
Reviewed-on: https://gerrit.libreoffice.org/44330
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Katarina Behrens <Katarina.Behrens@cib.de>